--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,23 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.5",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "monaco-editor": "^0.45.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "redis": "^4.6.12",
+    "socket.io": "^4.7.3",
+    "socket.io-client": "^4.7.3",
+    "uuid": "^9.0.1",
+    "web-vitals": "^2.1.4",
+    "ws": "^8.16.0",
+    "y-monaco": "^0.1.5",
+    "y-websocket": "^1.5.1",
+    "yjs": "^13.6.10",
+    "zustand": "^4.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
