--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toggle-dark-mode": "^1.1.1",
     "redis": "^4.6.12",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
@@ -48,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1"
   }
 }
