--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
       "react-app/jest"
     ]
   },
+  "homepage": "./",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -51,6 +52,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
