--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "chalk": "^4.1.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
+    "redis": "^4.6.12",
     "socket.io": "^4.7.3"
   }
 }
